<resources>
    <string name="app_name">Rekia</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_now">Login Now.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_password">Create new password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_worry_it_occurs_please_enter_the_email_address_linked_with_your_account">Don\'t worry! It occurs. Please enter the email address linked with your account.</string>
    <string name="send_code">Send Code</string>
    <string name="remember_password">Remember Password?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_verification_code_we_just_sent_on_your_email_address">Enter the verification code we just sent on your email address.</string>
    <string name="verify">Verify</string>
    <string name="didn_t_received_code">Didn’t received code?</string>
    <string name="resend">Resend</string>
    <string name="your_new_password_must_be_unique_from_those_previously_used">Your new password must be unique from those previously used.</string>
    <string name="new_password">New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_changed">Password Changed!</string>
    <string name="your_password_has_been">Your password has been</string>
    <string name="changed_successfully">changed successfully.</string>
    <string name="back_to_login">Back to Login</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="phone">phone</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="governorate">Governorate</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="residential_quarter">residential quarter</string>
    <string name="notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="rekia">Rekia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">menu</string>
    <string name="add_post">Add post</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="about_us">About us</string>
    <string name="settings">settings</string>
    <string name="guidance">Guidance</string>
    <string name="privacy">privacy</string>
    <string name="log_out">log out</string>
    <string name="material">Material</string>
    <string name="technical_support">Technical support</string>
    <string name="orders">Orders</string>
    <string name="order">Order</string>
    <string name="creat_post">Creat Post</string>
    <string name="share">Share</string>
    <string name="select">Select</string>
    <string name="quantity">Quantity</string>
    <string name="what_do_you_want_n_to_recycle">what do you want \n to recycle ?</string>
    <string name="custumer">Custumer</string>
    <string name="edit">Edit</string>
    <string name="customer">customer</string>
    <string name="posts">Posts</string>
    <string name="tax_number">TAX number</string>
    <string name="save_changes">Save changes</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="take_photo">Take photo</string>
    <string name="add_from_gallery">Add from Gallery</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_log_out">Do you want to log out ?</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="list">List</string>
    <string name="plastic">Plastic</string>
    <string name="metal">Metal</string>
    <string name="paper">Paper</string>
    <string name="wood">Wood</string>
    <string name="glass">Glass</string>
    <string name="steel">Steel</string>
    <string name="save_post">save post</string>
    <string name="copy_link">copy link</string>
    <string name="edit_post">edit post</string>
    <string name="edit_post_cap">Edit post</string>
    <string name="delete_post">delete post</string>
    <string name="default_web_client_id" translatable="false">YOUR_WEB_CLIENT_ID</string>
    <string name="brown_glass">brown-glass</string>
    <string name="white_glass">white-glass</string>
    <string name="cardboard">cardboard</string>
    <string name="privecy_txt">The Recycling App\'s privacy policy explains how the App collects, uses and protects users\' personal information. It typically covers aspects such as the types of data collected, how that data is used (for example, to provide recycling services or improve the application), whether the data is shared with third parties, the security measures in place to protect user information, and the user\'s controls over their data. and information about cookies, tracking, legal compliance with privacy laws, and procedures for notifying users of policy changes. Reviewing the Privacy Policy helps users understand how their data is handled and their rights in relation to their personal information.</string>
    <string name="location">Location</string>
    <string name="accounts">Accounts</string>
    <string name="search_by_address">Search by address..</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_order_this">Are You Sure You Want To Order This ?</string>
    <string name="le_for_1_kilo">LE For 1 Kilo</string>
    <string name="send_you_a_request">Send you a request.</string>
    <string name="history">History</string>
    <string name="from">From</string>
    <string name="fromm">From:</string>
    <string name="quantity_kilo">Quantity (Kilo)</string>
    <string name="has_the_order_been_received_from_you">Has the order been received from you?</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="alumetal">Alumetal</string>
    <string name="if_the_classification_was_done_incorrectly">If the classification was done incorrectly</string>
    <string name="please_enter_the_category_manually">please enter the Category manually :</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="battery">battery</string>
    <string name="type">Type:</string>
    <string name="waiting_for_a_reply">waiting for a reply:</string>

    <string-array name="quantity_options">
        <item>Quantity (pieces)</item>
        <item>Quantity (Kilo)</item>
    </string-array>

</resources>