<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/home_nav_ic"
        />

    <item android:id="@+id/navigation_notification"
        android:title="@string/notification"
        android:icon="@drawable/notification_nav_ic"
        />
    <item android:id="@+id/navigation_add_post"
        android:title="@string/add_post"
        android:icon="@drawable/add_post_nav"
        />
    <item android:id="@+id/navigation_chat"
        android:title="@string/chat"
        android:icon="@drawable/chat_icon"
        />

    <item android:id="@+id/navigation_list"
        android:title="@string/list"
        android:icon="@drawable/list_ic_nav"
        />
</menu>