<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="190dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="15dp"
    android:backgroundTint="#F6F6F6"
    app:cardBackgroundColor="#F6F6F6"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    tools:context=".ui.listActivitySeller.ListComponents.profile.editProfile.EditProfileSeller">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/do_you_want_to_log_out"
        android:textColor="#6B6A6A"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title">

        <TextView
            android:id="@+id/option1Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/log_out"
            android:textColor="@color/my_light_primary"
            android:textSize="14dp" />

        <Space
            android:layout_width="19dp"
            android:layout_height="wrap_content"

            />

        <TextView
            android:id="@+id/option2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cancel"
            android:textColor="#E71E1E"
            android:textSize="14dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
