<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="15dp"
    android:backgroundTint="#F6F6F6"
    app:cardBackgroundColor="#F6F6F6"
    app:cardElevation="10dp">
    <!--    app:cardCornerRadius="20dp"-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/warin_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunitobold"
            android:text="@string/are_you_sure_you_want_to_order_this"
            android:textColor="#8E8C8C"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon" />


        <!-- Button 1 -->

        <Button
            android:id="@+id/no_btn"
            android:layout_width="120dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rectangle_bord"
            android:backgroundTintMode="src_atop"
            android:minWidth="120dp"
            android:minHeight="50dp"
            android:text="@string/no"
            android:textColor="@color/my_light_primary"
            android:textSize="15dp"
            app:layout_constraintEnd_toStartOf="@+id/yes_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <!-- Button 2 -->

        <Button
            android:id="@+id/yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rectangle_1465"
            android:backgroundTintMode="src_atop"
            android:minWidth="120dp"
            android:minHeight="50dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/no_btn"
            app:layout_constraintTop_toBottomOf="@id/text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>